--- a/test/test-data.html
+++ b/test/test-data.html
@@ -4,7 +4,7 @@
   test_data.row_model = [{
     label: "Действие",
     caption: "Принять",
-    name: 'accept',
+    name: 'process',
     transform: 'action'
   }, {
     label: "№ талона",
