--- a/test/test-data.html
+++ b/test/test-data.html
@@ -29,7 +29,7 @@
     }
   }, {
     label: 'Время ожидаения',
-    field: ['time_bounds'],
+    field: ['booking_date'],
     transform: 'doomclock'
   }];
 </script>
