--- a/iris-ticketlist.html
+++ b/iris-ticketlist.html
@@ -24,9 +24,9 @@
     </style>
 
     <paper-listbox id="list">
-      <iris-ticketlist-head row-model="{{rowModel}}"></iris-ticketlist-head>
-      <template is="dom-repeat" items="{{tickets}}" as="item">
-        <iris-ticketlist-row row-model="{{rowModel}}" ticket="{{item}}"></iris-ticketlist-row>
+      <iris-ticketlist-head row-model="[[rowModel]]"></iris-ticketlist-head>
+      <template is="dom-repeat" items="[[tickets]]" as="item">
+        <iris-ticketlist-row row-model="[[rowModel]]" ticket="[[item]]"></iris-ticketlist-row>
       </template>
     </paper-listbox>
 
@@ -39,10 +39,7 @@
         is: 'iris-ticketlist',
         properties: {
           tickets: {
-            type: Array,
-            value: function() {
-              return [];
-            }
+            type: Array
           },
           hasActions: {
             type: Boolean,
@@ -51,8 +48,7 @@
             }
           },
           rowModel: {
-            type: Array,
-            value: []
+            type: Array
           }
         }
       });
