--- a/iris-ticketlist-head.html
+++ b/iris-ticketlist-head.html
@@ -16,11 +16,11 @@
       }
     </style>
 
-    <paper-item id="row" class="horizontal layout">
+    <tr id="row" class="horizontal layout">
       <template is="dom-repeat" items="[[rowModel]]" as="field">
-        <span class="flex">[[field.label]]</span>
+        <th class="flex">[[field.label]]</th>
       </template>
-    </paper-item>
+    </tr>
 
   </template>
 
