--- a/iris-ticketlist-row.html
+++ b/iris-ticketlist-row.html
@@ -10,22 +10,23 @@
     <style>
       :host {
         display: block;
+        --paper-item-focused: {
+          border: none;
+        }
       }
       
       span {
         text-align: center;
       }
     </style>
-    <template is="dom-if" if="[[isVisible(ticket.state)]]">
 
-      <paper-item id="row" class="horizontal layout">
-        <template is="dom-repeat" items="[[rowModel]]" as="cellModel">
-          <span class="flex">
+    <tr id="row" class="horizontal layout">
+      <template is="dom-repeat" items="[[rowModel]]" as="cellModel">
+        <td class="flex">
           <iris-ticketlist-cell ticket="[[ticket]]" cell-model="[[cellModel]]"></iris-ticketlist-cell>
-        </span>
-        </template>
-      </paper-item>
-    </template>
+        </td>
+      </template>
+    </tr>
 
   </template>
 
@@ -42,11 +43,8 @@
             type: Array
           }
         },
-        ticketAction() {
-          let selected = this.$.list.selected;
-        },
-        isVisible(state) {
-          return state == 'registered' || state == 'postponed';
+        ticketAction(e) {
+          console.log(e);
         }
       });
     })();
