--- a/iris-ticketlist.html
+++ b/iris-ticketlist.html
@@ -33,6 +33,7 @@
       }
     </style>
 
+    <h2><content selecot=".caption"></content></h2>
     <table id="list">
       <tr hidden$="[[hideHead]]">
         <template is="dom-repeat" items="[[rowModel]]" as="field">
