--- a/iris-ticketlist-cell.html
+++ b/iris-ticketlist-cell.html
@@ -96,12 +96,13 @@
             value: this.value
           });
           this.clone = clone;
-          console.log(this.ticket);
+
           if (this.start) clone.start = this.start;
           clone.ticketAction = this.ticketAction;
           clone.isLoading = false;
           Polymer.dom(this.$.stamp).innerHTML = '';
           Polymer.dom(this.$.stamp).appendChild(clone.root);
+          this.fire('ticket-cell-restamp');
         },
         buttonAction() {
           this.clone.isLoading = true;
