--- a/iris-ticketlist-cell.html
+++ b/iris-ticketlist-cell.html
@@ -62,19 +62,15 @@
             type: Object,
             value: function() {
               return {
-                veteran: "accessible",
-                invalid: "star-border",
+                veteran: "star-border",
+                invalid: "accessible",
                 manual_down: "arrow-downward"
               };
             }
           }
         },
         _ticketChanged() {
-          let icons_list = {
-            veteran: "accessible",
-            invalid: "star-border",
-            manual_down: "arrow-downward"
-          }
+
           this.cancelDebouncer('cancel-spinner');
 
           let cell = this.cellModel;
